fix spinner not centered

--- a/maps/css/main.css
+++ b/maps/css/main.css
@@ -25,7 +25,7 @@ body {
   z-index: 10001;
   width: 50px;
   height: 50px;
-  /* margin: -75px 0 0 -75px; */
+  margin: -25px 0 0 -25px;
 
   border: 5px solid #f3f3f3;
   /* Light grey */
